Fix a 1px jump during animation when changing steps

--- a/codelab-elements/google-codelab/_drawer.scss
+++ b/codelab-elements/google-codelab/_drawer.scss
@@ -107,7 +107,7 @@ google-codelab #drawer ol li a:focus {
   color: #212121;
   font-weight: 600;
   box-shadow: 0 1px 2px 0 rgba(60,64,67,.3), 0 2px 6px 2px rgba(60,64,67,.15);
-  border: none;
+  border-color: #fff;
 }
 
 google-codelab #drawer ol li[selected] .step:before {
